Add Darkmode, Chatbox, manager user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.security.oauth2.client.registration.google.client-id=IDgg
@@ -13,3 +14,10 @@ spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/o
 spring.security.oauth2.client.registration.google.scope=profile, email
 spring.security.oauth2.client.registration.google.client-name=Google
 spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
+
+spring.security.oauth2.client.registration.facebook.client-id=idfb
+spring.security.oauth2.client.registration.facebook.client-secret=idSecretfb
+spring.security.oauth2.client.registration.facebook.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.facebook.scope=public_profile, email
+spring.security.oauth2.client.registration.facebook.client-name=Facebook
+spring.security.oauth2.client.registration.facebook.authorization-grant-type=authorization_code
