--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.application.name=demo
+spring.security.user.name=thang7ielts
+spring.security.user.password=Aa@123
+spring.security.user.roles=ADMIN
 
 spring.datasource.url=jdbc:mysql://localhost:3306/WebBanHang
 spring.datasource.username=root
