--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=demo
-spring.security.user.name=thang7ielts
+spring.security.user.name=thang9ielts
 spring.security.user.password=Aa@123
 spring.security.user.roles=ADMIN
 
-spring.datasource.url=jdbc:mysql://localhost:3306/WebBanHang
+spring.datasource.url=jdbc:mysql://localhost:3306/WebBanSach
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
