Add vnpay Payment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.security.oauth2.client.registration.google.client-id=IDgg
-spring.security.oauth2.client.registration.google.client-secret=IDSecret
+spring.security.oauth2.client.registration.google.client-id=idgg
+spring.security.oauth2.client.registration.google.client-secret=secretgg
 spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
 spring.security.oauth2.client.registration.google.scope=profile, email
 spring.security.oauth2.client.registration.google.client-name=Google
@@ -24,3 +24,7 @@ spring.security.oauth2.client.registration.facebook.redirect-uri={baseUrl}/login
 spring.security.oauth2.client.registration.facebook.scope=public_profile, email
 spring.security.oauth2.client.registration.facebook.client-name=Facebook
 spring.security.oauth2.client.registration.facebook.authorization-grant-type=authorization_code
+
+
+hutech.openapi.dev-url=http://localhost:8080
+hutech.openapi.prod-url=http://prodserver:8080
